.antlr/MyGrammarParser.java
// Generated from /home/ntl/projects/nodejs_cc_kp/MyGrammar.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MyGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, NL=24, BLOCKCOMMENT=25, 
		COMMENT=26, WS=27, ELLIPSIS=28, BREAK=29, CASE=30, CATCH=31, CLASSDEF=32, 
		CONTINUE=33, ELSE=34, ELSEIF=35, END=36, FOR=37, FUNCTION=38, GET=39, 
		GLOBAL=40, IF=41, OTHERWISE=42, PERSISTENT=43, PROPERTIES=44, RETURN=45, 
		SET=46, SWITCH=47, TRY=48, WHILE=49, STATIC=50, ELMENT_WISE_LEFT_DIVIDE=51, 
		ELMENT_WISE_POWER=52, ELMENT_WISE_RIGHT_DIVIDE=53, ELMENT_WISE_TIMES=54, 
		ELMENT_WISE_TRANSPOSE=55, EQUALS=56, GREATER_THAN_OR_EQUAL=57, LESS_THAN_OR_EQUAL=58, 
		LOGICAL_AND=59, LOGICAL_OR=60, NOT_EQUAL=61, ASSIGN=62, BINARY_AND=63, 
		BINARY_OR=64, COLON=65, GREATER_THAN=66, LEFT_DIVIDE=67, LESS_THAN=68, 
		MINUS=69, NOT=70, PLUS=71, POWER=72, RIGHT_DIVIDE=73, TIMES=74, TRANSPOSE=75, 
		AT=76, COMMA=77, DOT=78, SEMI_COLON=79, LEFT_BRACE=80, LEFT_PARENTHESIS=81, 
		LEFT_SQUARE_BRACKET=82, QUESTION=83, RIGHT_BRACE=84, RIGHT_PARENTHESIS=85, 
		RIGHT_SQUARE_BRACKET=86, ID=87, IMAGINARY=88, INT=89, FLOAT=90, STRING=91;
	public static final int
		RULE_atom_boolean = 0, RULE_atom_empty_array = 1, RULE_atom_empty_cell = 2, 
		RULE_atom_end = 3, RULE_atom_float = 4, RULE_atom_imaginary = 5, RULE_atom_index_all = 6, 
		RULE_atom_integer = 7, RULE_atom_meta = 8, RULE_atom_string = 9, RULE_atom_var = 10, 
		RULE_matlab_file = 11, RULE_def_class = 12, RULE_class_property = 13, 
		RULE_class_attribute = 14, RULE_class_attribute_boolean = 15, RULE_class_attribute_meta = 16, 
		RULE_class_property_attribute = 17, RULE_class_property_attribute_boolean = 18, 
		RULE_class_property_attribute_access = 19, RULE_class_method_attribute = 20, 
		RULE_class_method_attribute_boolean = 21, RULE_class_method_attribute_access = 22, 
		RULE_super_classes = 23, RULE_def_function = 24, RULE_attrib_class_boolean = 25, 
		RULE_attrib_class_meta = 26, RULE_attrib_property_boolean = 27, RULE_attrib_property_access = 28, 
		RULE_attrib_method_boolean = 29, RULE_attrib_method_access = 30, RULE_atom_access = 31, 
		RULE_st_assign = 32, RULE_st_assign_left = 33, RULE_st_command = 34, RULE_st_if = 35, 
		RULE_st_else_if = 36, RULE_st_else = 37, RULE_st_for = 38, RULE_st_switch = 39, 
		RULE_st_case = 40, RULE_st_otherwize = 41, RULE_st_try = 42, RULE_st_catch = 43, 
		RULE_st_while = 44, RULE_function_params = 45, RULE_function_returns = 46, 
		RULE_statement = 47, RULE_xpr_tree = 48, RULE_xpr_tree_ = 49, RULE_xpr_array = 50, 
		RULE_xpr_array_ = 51, RULE_xpr_cell = 52, RULE_xpr_cell_ = 53, RULE_xpr_array_index = 54, 
		RULE_xpr_cell_index = 55, RULE_xpr_field = 56, RULE_xpr_function = 57, 
		RULE_xpr_function_paramer = 58, RULE_xpr_handle = 59, RULE_command_argument = 60;
	private static String[] makeRuleNames() {
		return new String[] {
			"atom_boolean", "atom_empty_array", "atom_empty_cell", "atom_end", "atom_float", 
			"atom_imaginary", "atom_index_all", "atom_integer", "atom_meta", "atom_string", 
			"atom_var", "matlab_file", "def_class", "class_property", "class_attribute", 
			"class_attribute_boolean", "class_attribute_meta", "class_property_attribute", 
			"class_property_attribute_boolean", "class_property_attribute_access", 
			"class_method_attribute", "class_method_attribute_boolean", "class_method_attribute_access", 
			"super_classes", "def_function", "attrib_class_boolean", "attrib_class_meta", 
			"attrib_property_boolean", "attrib_property_access", "attrib_method_boolean", 
			"attrib_method_access", "atom_access", "st_assign", "st_assign_left", 
			"st_command", "st_if", "st_else_if", "st_else", "st_for", "st_switch", 
			"st_case", "st_otherwize", "st_try", "st_catch", "st_while", "function_params", 
			"function_returns", "statement", "xpr_tree", "xpr_tree_", "xpr_array", 
			"xpr_array_", "xpr_cell", "xpr_cell_", "xpr_array_index", "xpr_cell_index", 
			"xpr_field", "xpr_function", "xpr_function_paramer", "xpr_handle", "command_argument"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'true'", "'false'", "'methods'", "'Abstract'", "'ConstructOnLoad'", 
			"'HandleCompatible'", "'Hidden'", "'Sealed'", "'AllowedSubclasses'", 
			"'InferiorClasses'", "'AbortSet'", "'Constant'", "'Dependent'", "'GetObservable'", 
			"'NonCopyable'", "'SetObservable'", "'Transient'", "'Access'", "'GetAccess'", 
			"'SetAccess'", "'public'", "'protected'", "'private'", null, null, null, 
			null, "'...'", "'break'", "'case'", "'catch'", "'classdef'", "'continue'", 
			"'else'", "'elseif'", "'end'", "'for'", "'function'", "'get'", "'global'", 
			"'if'", "'otherwise'", "'persistent'", "'properties'", "'return'", "'set'", 
			"'switch'", "'try'", "'while'", "'Static'", "'./'", "'.^'", "'.\\'", 
			"'.*'", "'.''", "'=='", "'>='", "'<='", "'&&'", "'||'", "'~='", "'='", 
			"'&'", "'|'", "':'", "'>'", "'/'", "'<'", "'-'", "'~'", "'+'", "'^'", 
			"'\\'", "'*'", "'''", "'@'", "','", "'.'", "';'", "'{'", "'('", "'['", 
			"'?'", "'}'", "')'", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"NL", "BLOCKCOMMENT", "COMMENT", "WS", "ELLIPSIS", "BREAK", "CASE", "CATCH", 
			"CLASSDEF", "CONTINUE", "ELSE", "ELSEIF", "END", "FOR", "FUNCTION", "GET", 
			"GLOBAL", "IF", "OTHERWISE", "PERSISTENT", "PROPERTIES", "RETURN", "SET", 
			"SWITCH", "TRY", "WHILE", "STATIC", "ELMENT_WISE_LEFT_DIVIDE", "ELMENT_WISE_POWER", 
			"ELMENT_WISE_RIGHT_DIVIDE", "ELMENT_WISE_TIMES", "ELMENT_WISE_TRANSPOSE", 
			"EQUALS", "GREATER_THAN_OR_EQUAL", "LESS_THAN_OR_EQUAL", "LOGICAL_AND", 
			"LOGICAL_OR", "NOT_EQUAL", "ASSIGN", "BINARY_AND", "BINARY_OR", "COLON", 
			"GREATER_THAN", "LEFT_DIVIDE", "LESS_THAN", "MINUS", "NOT", "PLUS", "POWER", 
			"RIGHT_DIVIDE", "TIMES", "TRANSPOSE", "AT", "COMMA", "DOT", "SEMI_COLON", 
			"LEFT_BRACE", "LEFT_PARENTHESIS", "LEFT_SQUARE_BRACKET", "QUESTION", 
			"RIGHT_BRACE", "RIGHT_PARENTHESIS", "RIGHT_SQUARE_BRACKET", "ID", "IMAGINARY", 
			"INT", "FLOAT", "STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MyGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MyGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Atom_booleanContext extends ParserRuleContext {
		public Atom_booleanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom_boolean; }
	}

	public final Atom_booleanContext atom_boolean() throws RecognitionException {
		Atom_booleanContext _localctx = new Atom_booleanContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_atom_boolean);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_la = _input.LA(1);
			if ( !(_la==T__0 || _la==T__1) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Atom_empty_arrayContext extends ParserRuleContext {
		public TerminalNode LEFT_SQUARE_BRACKET() { return getToken(MyGrammarParser.LEFT_SQUARE_BRACKET, 0); }
		public TerminalNode RIGHT_SQUARE_BRACKET() { return getToken(MyGrammarParser.RIGHT_SQUARE_BRACKET, 0); }
		public Atom_empty_arrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom_empty_array; }
	}

	public final Atom_empty_arrayContext atom_empty_array() throws RecognitionException {
		Atom_empty_arrayContext _localctx = new Atom_empty_arrayContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_atom_empty_array);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(LEFT_SQUARE_BRACKET);
			setState(125);
			match(RIGHT_SQUARE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Atom_empty_cellContext extends ParserRuleContext {
		public TerminalNode LEFT_BRACE() { return getToken(MyGrammarParser.LEFT_BRACE, 0); }
		public TerminalNode RIGHT_BRACE() { return getToken(MyGrammarParser.RIGHT_BRACE, 0); }
		public Atom_empty_cellContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom_empty_cell; }
	}

	public final Atom_empty_cellContext atom_empty_cell() throws RecognitionException {
		Atom_empty_cellContext _localctx = new Atom_empty_cellContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_atom_empty_cell);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(LEFT_BRACE);
			setState(128);
			match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Atom_endContext extends ParserRuleContext {
		public TerminalNode END() { return getToken(MyGrammarParser.END, 0); }
		public Atom_endContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom_end; }
	}

	public final Atom_endContext atom_end() throws RecognitionException {
		Atom_endContext _localctx = new Atom_endContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_atom_end);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Atom_floatContext extends ParserRuleContext {
		public TerminalNode FLOAT() { return getToken(MyGrammarParser.FLOAT, 0); }
		public Atom_floatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom_float; }
	}

	public final Atom_floatContext atom_float() throws RecognitionException {
		Atom_floatContext _localctx = new Atom_floatContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_atom_float);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(FLOAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Atom_imaginaryContext extends ParserRuleContext {
		public TerminalNode IMAGINARY() { return getToken(MyGrammarParser.IMAGINARY, 0); }
		public Atom_imaginaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom_imaginary; }
	}

	public final Atom_imaginaryContext atom_imaginary() throws RecognitionException {
		Atom_imaginaryContext _localctx = new Atom_imaginaryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_atom_imaginary);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(IMAGINARY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Atom_index_allContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(MyGrammarParser.COLON, 0); }
		public Atom_index_allContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom_index_all; }
	}

	public final Atom_index_allContext atom_index_all() throws RecognitionException {
		Atom_index_allContext _localctx = new Atom_index_allContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_atom_index_all);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Atom_integerContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(MyGrammarParser.INT, 0); }
		public Atom_integerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom_integer; }
	}

	public final Atom_integerContext atom_integer() throws RecognitionException {
		Atom_integerContext _localctx = new Atom_integerContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_atom_integer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Atom_metaContext extends ParserRuleContext {
		public List<TerminalNode> QUESTION() { return getTokens(MyGrammarParser.QUESTION); }
		public TerminalNode QUESTION(int i) {
			return getToken(MyGrammarParser.QUESTION, i);
		}
		public List<Atom_varContext> atom_var() {
			return getRuleContexts(Atom_varContext.class);
		}
		public Atom_varContext atom_var(int i) {
			return getRuleContext(Atom_varContext.class,i);
		}
		public TerminalNode LEFT_BRACE() { return getToken(MyGrammarParser.LEFT_BRACE, 0); }
		public TerminalNode RIGHT_BRACE() { return getToken(MyGrammarParser.RIGHT_BRACE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(MyGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MyGrammarParser.COMMA, i);
		}
		public Atom_metaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom_meta; }
	}

	public final Atom_metaContext atom_meta() throws RecognitionException {
		Atom_metaContext _localctx = new Atom_metaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_atom_meta);
		int _la;
		try {
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case QUESTION:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				match(QUESTION);
				setState(141);
				atom_var();
				}
				break;
			case LEFT_BRACE:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				match(LEFT_BRACE);
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==QUESTION) {
					{
					setState(143);
					match(QUESTION);
					setState(144);
					atom_var();
					setState(152);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA || _la==QUESTION) {
						{
						{
						setState(146);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==COMMA) {
							{
							setState(145);
							match(COMMA);
							}
						}

						setState(148);
						match(QUESTION);
						setState(149);
						atom_var();
						}
						}
						setState(154);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(157);
				match(RIGHT_BRACE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Atom_stringContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(MyGrammarParser.STRING, 0); }
		public Atom_stringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom_string; }
	}

	public final Atom_stringContext atom_string() throws RecognitionException {
		Atom_stringContext _localctx = new Atom_stringContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_atom_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
